added link to hangman game

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
 				</a>
 			</div>
 			<div class="project-wrap" id="proj-2">
-				<a href="#proj-2-img">
+				<a href="https://cdt12988.github.io/Word-Guess-Game/index.html">
 					<img class="project-img" id="proj-2-img" src="assets/images/noose.png" alt="Hangman Game">
 					<div class="project-text" onmouseover="chopac('proj-2-img')" onmouseout="reopac('proj-2-img')">Hangman Game</div>
 				</a>
