added link to Star Wars RPG

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,9 +46,9 @@
 				</a>
 			</div>
 			<div class="project-wrap" id="proj-3">
-				<a href="#proj-3-img">
+				<a href="https://cdt12988.github.io/unit-4-game/">
 					<img class="project-img" id="proj-3-img" src="assets/images/castle.png" alt="RPG Game">
-					<div class="project-text" onmouseover="chopac('proj-3-img')" onmouseout="reopac('proj-3-img')">RPG Game</div>
+					<div class="project-text" onmouseover="chopac('proj-3-img')" onmouseout="reopac('proj-3-img')"> Star Wars RPG</div>
 				</a>
 			</div>
 			<div class="project-wrap" id="proj-4">
