added a link to my trivia game to the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,9 +52,9 @@
 				</a>
 			</div>
 			<div class="project-wrap" id="proj-4">
-				<a href="#proj-4-img">
+				<a href="https://cdt12988.github.io/TriviaGame/">
 					<img class="project-img" id="proj-4-img" src="assets/images/question.png" alt="Trivia">
-					<div class="project-text" onmouseover="chopac('proj-4-img')" onmouseout="reopac('proj-4-img')">Trivia</div>
+					<div class="project-text" onmouseover="chopac('proj-4-img')" onmouseout="reopac('proj-4-img')">MCU Trivia</div>
 				</a>
 			</div>
 			<div class="project-wrap" id="proj-5">
