added link to gifTV

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,10 +57,18 @@
 					<div class="project-text" onmouseover="chopac('proj-4-img')" onmouseout="reopac('proj-4-img')">MCU Trivia</div>
 				</a>
 			</div>
+<!--
 			<div class="project-wrap" id="proj-5">
 				<a href="#proj-5-img">
 					<img class="project-img" id="proj-5-img" src="assets/images/info.png" alt="Info Widget">
 					<div class="project-text" onmouseover="chopac('proj-5-img')" onmouseout="reopac('proj-5-img')">Info Widget</div>
+				</a>
+			</div>
+-->
+			<div class="project-wrap" id="proj-5">
+				<a href="https://cdt12988.github.io/gifTV/">
+					<img class="project-img" id="proj-5-img" src="assets/images/info.png" alt="gifTV">
+					<div class="project-text" onmouseover="chopac('proj-5-img')" onmouseout="reopac('proj-5-img')">gifTV</div>
 				</a>
 			</div>
 			<div class="project-wrap" id="proj-6">
