added link to rps

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
 				</a>
 			</div>
 			<div class="project-wrap" id="proj-6">
-				<a href="#proj-6-img">
+				<a href="https://cdt12988.github.io/rps-multiplayer/">
 					<img class="project-img" id="proj-6-img" src="assets/images/rps.png" alt="Rock Paper Scissors">
 					<div class="project-text" onmouseover="chopac('proj-6-img')" onmouseout="reopac('proj-6-img')">Rock Paper Scissors</div>
 				</a>
